sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: ')' expected but '}' found.
			}
                        ^AlgBubbleSort1:12: error: illegal start of simple expression
		}
                ^AlgBubbleSort1:14: error: 'while' expected but '}' found.
	}
        ^AlgBubbleSort1:19: error: Unmatched closing brace '}' ignored here
}
^